--- a/views/index.html
+++ b/views/index.html
@@ -19,10 +19,13 @@
     <div class="container">
       <div class="card">
         <div class="row">
-          <span class="header">CSV File Connector</span
-          ><a target="_blank" href="https://glitch.com/edit/#!/simple-csv-wdc?path=README.md"
-            ><div class="info" title="More Info">?</div></a
+          <span class="header">CSV URL Connector</span>
+          <a
+            target="_blank"
+            href="https://glitch.com/edit/#!/simple-csv-wdc?path=README.md"
           >
+            <div class="info" title="More Info">?</div>
+          </a>
         </div>
         <p class="label">Enter your CSV's URL:</p>
         <div class="row">
@@ -30,17 +33,24 @@
         </div>
         <p class="label small" onclick="toggleAdvanced()">Advanced +</p>
         <div class="bearerDiv hidden" id="advanced">
-          <p class="label bearerLabel">Bearer token: </p>
+          <p class="label bearerLabel">Bearer token:</p>
           <input id="token" type="text" />
           <select id="method">
             <option value="GET" selected>GET</option>
             <option value="POST">POST</option>
           </select>
         </div>
-        <button class="primary" onclick="_submitDataToTableau()">Get Data!</button>
+        <button class="primary" onclick="_submitDataToTableau()">
+          Get Data!
+        </button>
         <div class="error"></div>
       </div>
     </div>
-    <img src="https://devplat-hit-counter.herokuapp.com/counter.png" alt="" style="display:none;" aria-hidden="true"><!-- Hit tracker -->
+    <img
+      src="https://devplat-hit-counter.herokuapp.com/counter.png"
+      alt=""
+      style="display:none;"
+      aria-hidden="true"
+    /><!-- Hit tracker -->
   </body>
 </html>
