🙎📻 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
           <span class="header">CSV URL Connector</span>
           <a
             target="_blank"
-            href="https://glitch.com/edit/#!/simple-csv-wdc?path=README.md"
+            href="https://github.com/KeshiaRose/Basic-CSV-WDC"
           >
             <div class="info" title="More Info">?</div>
           </a>
