🏤👭 Updated with Glitch

--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,14 @@ body {
   font-size: 16px;
 }
 
+.loadError {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .container {
   height: 100%;
   display: flex;
