🌕💒 Made Loose Typed Mode default

--- a/views/index.html
+++ b/views/index.html
@@ -74,14 +74,14 @@
 
           <div class="tabs is-toggle is-fullwidth is-small">
             <ul>
-              <li id="typed" class="is-active">
+              <li id="typed">
                 <a href="javascript:_setMode('typed')" class="is-flex is-flex-direction-column">
                   <span><b>Strict Typed Mode</b></span>
                   <span>Infer column data types and try to clean data</span>
                   <span><i>Slow, don't use with large files</i></span>
                 </a>
               </li>
-              <li id="loosetyped">
+              <li id="loosetyped" class="is-active">
                 <a href="javascript:_setMode('loosetyped')" class="is-flex is-flex-direction-column">
                   <span><b>Loose Typed Mode</b></span>
                   <span>Infer column data types but don't clean data</span>
