🚏🍈 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -133,6 +133,9 @@
               Get Data!
             </button>
           </div>
+        <p class="smallLabel" style="text-align:center">
+          Want to support hosting this free WDC? <a href="https://www.buymeacoffee.com/KeshiaRose" target="_blank">Buy me some cheese! 🧀</a> 
+        </p>
           <div class="error"></div>
         </div>
       </div>
@@ -149,9 +152,9 @@
       setTimeout(function(){
         try {
           var version = +tableau.platformVersion.split(".").slice(0,2).join(".");
-          if (version < 2019.4) document.body.innerHTML = "<div class='loadError'><p>This WDC only works in Tableau Desktop 2019.4 or higher.</p><p><a href='https://www.tableau.com/support/releases' target='_blank'>Update now.</a></p></div>"
+          if (version < 2019.4) document.body.innerHTML = "<div class='loadError'><p>This WDC only works in Tableau Desktop 2019.4 or higher.</p><p>Your version is: "+version+"</p><p><a href='https://www.tableau.com/support/releases' target='_blank'>Update now.</a></p></div>"
         } catch (e) {
-          document.body.innerHTML = "<div class='loadError'><p>You must open this WDC in Tableau Desktop 2019.4+ to use it.</p><p><a href='https://tableau.github.io/webdataconnector/docs/wdc_use_in_tableau.html' target='_blank'>Learn how.</a></p></div>"
+          document.body.innerHTML = "<div class='loadError'><p>You must open this WDC in Tableau Desktop 2019.4+ to use it.</p><p>"+e+"</p><p><a href='https://tableau.github.io/webdataconnector/docs/wdc_use_in_tableau.html' target='_blank'>Learn how.</a></p></div>"
         }
       }, 1000);
     </script>
