🔷🔠 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -142,7 +142,7 @@
     </section>
 
     <img
-      src="https://devplat-hit-counter.herokuapp.com/counter.png"
+      src="https://sliceofkeesh-hit-counter.glitch.me/counter.png?page=csv_wdc"
       alt=""
       style="display:none;"
       aria-hidden="true"
